--- a/index.html
+++ b/index.html
@@ -556,13 +556,7 @@
             ></textarea>
           </label>
 
-          <input
-            required
-            class="checkbox"
-            type="checkbox"
-            name="terms"
-            value="agree"
-            id="checkbox-policy"
+          <input required class="checkbox" type="checkbox" name="terms" value="agree" id="checkbox-policy"
           >
           <label class="modal-checkbox-label" for="checkbox-policy">
             <span class="modal-checkbox">
