more homework corrections

--- a/index.html
+++ b/index.html
@@ -564,8 +564,10 @@
                 <use href="./images/svg/icons.svg#icon-checkmark"></use>
               </svg>
             </span>
-            <span>
-              I agree with the newsletter and accept the Terms and Conditions
+            <span class="terms-condition">
+              I agree with the newsletter and accept the <a href="#" target="_blank" class="terms-condition-link">
+                Terms and Conditions
+              </a>
             </span>
           </label>
           <button type="submit" class="modal-submit-button">Submit</button>
